--- a/circuit_distillation_training.ipynb
+++ b/circuit_distillation_training.ipynb
@@ -1,26 +1,6 @@
 {
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "# Circuit Distillation for Math Reasoning\n",
-        "\n",
-        "This notebook implements **Circuit Distillation** - training a student model to align its internal circuit representations with a teacher model using CKA (Centered Kernel Alignment) loss.\n",
-        "\n",
-        "**Loss function:** `L = L_CE + λ * Σ L_CKA(paired_heads)`\n",
-        "\n",
-        "Based on: [Circuit Distillation (arxiv:2509.25002)](https://arxiv.org/abs/2509.25002)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## 1. Setup & Installation"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
@@ -65,20 +45,12 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Login to HuggingFace (needed for Llama models)\n",
-        "HF_TOKEN = \"\"  # <-- PUT YOUR TOKEN HERE\n",
+        "HF_TOKEN = \"\" \n",
         "\n",
         "if HF_TOKEN:\n",
         "    login(HF_TOKEN)\n",
         "else:\n",
         "    print(\"⚠️ No HF token set. Get one from https://huggingface.co/settings/tokens\")"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## 2. Configuration"
       ]
     },
     {
@@ -89,21 +61,17 @@
       "source": [
         "@dataclass\n",
         "class Config:\n",
-        "    # Models\n",
         "    teacher_model: str = 'meta-llama/Meta-Llama-3-8B'\n",
         "    student_model: str = 'meta-llama/Llama-3.2-1B'\n",
         "    \n",
-        "    # Training - matching friend's setup\n",
         "    epochs: int = 80\n",
         "    batch_size: int = 8\n",
-        "    learning_rate: float = 1e-4  # Friend uses 1e-4\n",
-        "    lambda_cka: float = 0.05     # CKA weight\n",
+        "    learning_rate: float = 1e-4 \n",
+        "    lambda_cka: float = 0.05  \n",
         "    grad_clip: float = 1.0\n",
         "    \n",
-        "    # Evaluation\n",
-        "    eval_every: int = 1  # Evaluate every epoch\n",
-        "    \n",
-        "    # Device\n",
+        "    eval_every: int = 1  \n",
+        "\n",
         "    device: str = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
         "\n",
         "config = Config()\n",
@@ -113,13 +81,6 @@
         "print(f\"Learning rate: {config.learning_rate}\")\n",
         "print(f\"Lambda CKA: {config.lambda_cka}\")\n",
         "print(f\"Epochs: {config.epochs}\")"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## 3. Load Datasets"
       ]
     },
     {
@@ -146,23 +107,12 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## 4. CKA Loss Implementation"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
         "def linear_cka(X: torch.Tensor, Y: torch.Tensor, eps: float = 1e-8) -> torch.Tensor:\n",
-        "    \"\"\"\n",
-        "    Compute Linear CKA between activation matrices.\n",
-        "    CKA(X, Y) = ||Y'X||_F^2 / (||X'X||_F * ||Y'Y||_F)\n",
-        "    \"\"\"\n",
         "    X = X.float()\n",
         "    Y = Y.float()\n",
         "    \n",
@@ -192,17 +142,8 @@
         "        loss = 1.0 - cka\n",
         "        return loss, cka\n",
         "\n",
-        "# Test\n",
-        "print(\"Testing CKA...\")\n",
         "X = torch.randn(32, 128)\n",
-        "print(f\"CKA(X, X) = {linear_cka(X, X).item():.4f} (should be 1.0)\")"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## 5. Layer Pairing (Ablation-based)"
+        "print(f\"CKA(X, X) = {linear_cka(X, X).item():.4f}\")"
       ]
     },
     {
@@ -245,13 +186,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## 6. Dataset Class (Matching Friend's Implementation)"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
@@ -270,25 +204,21 @@
         "        prompt, answer = self.data[idx]\n",
         "        answer = str(answer)\n",
         "        \n",
-        "        # Tokenize prompt\n",
         "        prompt_ids = self.tokenizer(\n",
         "            prompt,\n",
         "            return_tensors=\"pt\",\n",
         "            padding=False,\n",
         "        )[\"input_ids\"].squeeze(0)\n",
-        "        \n",
-        "        # Tokenize answer + EOS\n",
+        "\n",
         "        answer_ids = self.tokenizer(\n",
         "            answer + self.tokenizer.eos_token,\n",
         "            return_tensors=\"pt\",\n",
         "            padding=False,\n",
         "        )[\"input_ids\"].squeeze(0)\n",
         "        \n",
-        "        # Build full input\n",
         "        input_ids = torch.cat([prompt_ids, answer_ids])\n",
         "        attention_mask = torch.ones_like(input_ids)\n",
         "        \n",
-        "        # Labels: only predict answer tokens (including EOS)\n",
         "        labels = torch.full_like(input_ids, -100)\n",
         "        labels[len(prompt_ids):] = answer_ids\n",
         "        \n",
@@ -298,13 +228,6 @@
         "            \"labels\": labels,\n",
         "            \"prompt_len\": len(prompt_ids),\n",
         "        }"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## 7. Activation Caching"
       ]
     },
     {
@@ -350,13 +273,11 @@
       "outputs": [],
       "source": [
         "def extract_int_after_equals(text):\n",
-        "    \"\"\"Extracts the integer that appears after '=' in a generated string.\"\"\"\n",
         "    m = re.search(r\"=\\s*(\\d+)\", text)\n",
         "    return int(m.group(1)) if m else None\n",
         "\n",
         "@torch.no_grad()\n",
         "def eval_accuracy(model, tokenizer, data: Dict, batch_size=50) -> float:\n",
-        "    \"\"\"Evaluate accuracy - MATCHING FRIEND'S IMPLEMENTATION.\"\"\"\n",
         "    model.eval()\n",
         "    \n",
         "    prompts = list(data.keys())\n",
@@ -364,7 +285,7 @@
         "    \n",
         "    correct, total = 0, 0\n",
         "    original_padding_side = tokenizer.padding_side\n",
-        "    tokenizer.padding_side = \"right\"  # Critical for correct batched generation\n",
+        "    tokenizer.padding_side = \"right\" \n",
         "    \n",
         "    for i in tqdm(range(0, len(prompts), batch_size), desc=\"Evaluating\", leave=False):\n",
         "        batch_prompts = prompts[i:i + batch_size]\n",
@@ -396,13 +317,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## 9. Load Models"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
@@ -410,14 +324,13 @@
       "source": [
         "device = config.device\n",
         "\n",
-        "print(\"Loading tokenizer...\")\n",
         "tokenizer = AutoTokenizer.from_pretrained(config.student_model)\n",
         "tokenizer.pad_token = tokenizer.eos_token\n",
         "\n",
         "print(f\"Loading student model: {config.student_model}\")\n",
         "student = AutoModelForCausalLM.from_pretrained(\n",
         "    config.student_model,\n",
-        "    torch_dtype=torch.float32,  # float32 for stability\n",
+        "    torch_dtype=torch.float32,  \n",
         "    device_map=device\n",
         ")\n",
         "\n",
@@ -429,16 +342,7 @@
         ")\n",
         "teacher.eval()\n",
         "for p in teacher.parameters():\n",
-        "    p.requires_grad = False\n",
-        "\n",
-        "print(\"✅ Models loaded!\")"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## 10. Baseline Evaluation"
+        "    p.requires_grad = False"
       ]
     },
     {
@@ -452,18 +356,11 @@
         "print(\"=\"*50)\n",
         "\n",
         "baseline_student = eval_accuracy(student, tokenizer, TEST_DATA)\n",
-        "print(f\"\\n📊 Student (1B) baseline accuracy: {baseline_student:.3f}\")\n",
+        "print(f\"Student (1B) baseline accuracy: {baseline_student:.3f}\")\n",
         "\n",
         "baseline_teacher = eval_accuracy(teacher, tokenizer, TEST_DATA)\n",
-        "print(f\"📊 Teacher (8B) baseline accuracy: {baseline_teacher:.3f}\")\n",
+        "print(f\"Teacher (8B) baseline accuracy: {baseline_teacher:.3f}\")\n",
         "print(\"=\"*50)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## 11. Training Setup"
       ]
     },
     {
@@ -485,13 +382,6 @@
         "print(f\"Batches per epoch: {len(train_loader)}\")\n",
         "print(f\"Student layers for CKA: {student_layers}\")\n",
         "print(f\"Teacher layers for CKA: {teacher_layers}\")"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## 12. Training Loop"
       ]
     },
     {
@@ -525,7 +415,6 @@
         "    teacher_cache = ActivationCache()\n",
         "    \n",
         "    for step, batch in enumerate(train_loader):\n",
-        "        # Move to device\n",
         "        batch = {\n",
         "            k: (v.to(device) if torch.is_tensor(v) else v)\n",
         "            for k, v in batch.items()\n",
@@ -535,21 +424,17 @@
         "        attention_mask = batch['attention_mask']\n",
         "        labels = batch['labels']\n",
         "        \n",
-        "        # Skip if no supervised tokens\n",
         "        if (labels != -100).sum().item() == 0:\n",
         "            continue\n",
         "        \n",
-        "        # Register hooks\n",
         "        student_cache.register_hooks(student, student_layers)\n",
         "        teacher_cache.register_hooks(teacher, teacher_layers)\n",
         "        \n",
         "        try:\n",
-        "            # Teacher forward (no grad)\n",
         "            with torch.no_grad():\n",
         "                teacher(input_ids=input_ids, attention_mask=attention_mask)\n",
         "            t_acts = {k: v.detach() for k, v in teacher_cache.activations.items()}\n",
         "            \n",
-        "            # Student forward\n",
         "            outputs = student(\n",
         "                input_ids=input_ids,\n",
         "                attention_mask=attention_mask,\n",
@@ -557,10 +442,8 @@
         "            )\n",
         "            s_acts = student_cache.activations\n",
         "            \n",
-        "            # CE Loss (from model output)\n",
         "            ce_loss = outputs.loss\n",
         "            \n",
-        "            # CKA Loss over paired layers\n",
         "            cka_losses = []\n",
         "            for s_idx, t_idx in LAYER_MAPPING.items():\n",
         "                if s_idx in s_acts and t_idx in t_acts:\n",
@@ -573,20 +456,16 @@
         "            else:\n",
         "                cka_loss = torch.tensor(0.0, device=device)\n",
         "            \n",
-        "            # Total loss\n",
         "            total_loss = ce_loss + config.lambda_cka * cka_loss\n",
         "            \n",
-        "            # Skip if NaN\n",
         "            if torch.isnan(total_loss):\n",
         "                continue\n",
         "            \n",
-        "            # Backward\n",
         "            optimizer.zero_grad()\n",
         "            total_loss.backward()\n",
         "            torch.nn.utils.clip_grad_norm_(student.parameters(), config.grad_clip)\n",
         "            optimizer.step()\n",
         "            \n",
-        "            # Log\n",
         "            epoch_ce += ce_loss.item()\n",
         "            epoch_cka += cka_loss.item()\n",
         "            epoch_total += total_loss.item()\n",
@@ -599,7 +478,6 @@
         "            student_cache.clear()\n",
         "            teacher_cache.clear()\n",
         "    \n",
-        "    # Epoch metrics\n",
         "    if n_batches > 0:\n",
         "        avg_ce = epoch_ce / n_batches\n",
         "        avg_cka = epoch_cka / n_batches\n",
@@ -607,14 +485,13 @@
         "    else:\n",
         "        avg_ce = avg_cka = avg_total = 0\n",
         "    \n",
-        "    # Evaluate\n",
         "    accuracy = eval_accuracy(student, tokenizer, TEST_DATA)\n",
         "    \n",
         "    if accuracy > best_accuracy:\n",
         "        best_accuracy = accuracy\n",
         "        student.save_pretrained('./best_model')\n",
         "        tokenizer.save_pretrained('./best_model')\n",
-        "        print(f\"    💾 New best model saved!\")\n",
+        "        print(f\"New best model saved!\")\n",
         "    \n",
         "    history['epoch'].append(epoch + 1)\n",
         "    history['ce_loss'].append(avg_ce)\n",
@@ -631,13 +508,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## 13. Final Evaluation"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
@@ -648,9 +518,9 @@
         "print(\"=\"*50)\n",
         "\n",
         "final_accuracy = eval_accuracy(student, tokenizer, TEST_DATA)\n",
-        "print(f\"\\n📊 Final student accuracy: {final_accuracy:.3f}\")\n",
-        "print(f\"📊 Baseline was: {baseline_student:.3f}\")\n",
-        "print(f\"📊 Improvement: {(final_accuracy - baseline_student)*100:+.2f}%\")\n",
+        "print(f\"Final student accuracy: {final_accuracy:.3f}\")\n",
+        "print(f\"Baseline was: {baseline_student:.3f}\")\n",
+        "print(f\"Improvement: {(final_accuracy - baseline_student)*100:+.2f}%\")\n",
         "print(\"=\"*50)"
       ]
     },
@@ -669,7 +539,6 @@
       "source": [
         "fig, axes = plt.subplots(2, 2, figsize=(14, 10))\n",
         "\n",
-        "# Total loss\n",
         "ax1 = axes[0, 0]\n",
         "ax1.plot(history['epoch'], history['total_loss'], 'b-', linewidth=2)\n",
         "ax1.set_xlabel('Epoch')\n",
@@ -677,7 +546,6 @@
         "ax1.set_title('Total Loss (CE + λ*CKA)')\n",
         "ax1.grid(True, alpha=0.3)\n",
         "\n",
-        "# CE and CKA separately\n",
         "ax2 = axes[0, 1]\n",
         "ax2.plot(history['epoch'], history['ce_loss'], 'b-o', label='CE Loss', markersize=3)\n",
         "ax2.plot(history['epoch'], history['cka_loss'], 'r-o', label='CKA Loss', markersize=3)\n",
@@ -687,7 +555,6 @@
         "ax2.legend()\n",
         "ax2.grid(True, alpha=0.3)\n",
         "\n",
-        "# Accuracy\n",
         "ax3 = axes[1, 0]\n",
         "ax3.plot(history['epoch'], history['accuracy'], 'g-o', markersize=4)\n",
         "ax3.axhline(y=baseline_student, color='gray', linestyle='--', label=f'Baseline ({baseline_student:.3f})')\n",
@@ -698,7 +565,6 @@
         "ax3.legend()\n",
         "ax3.grid(True, alpha=0.3)\n",
         "\n",
-        "# Accuracy improvement\n",
         "ax4 = axes[1, 1]\n",
         "improvement = [acc - baseline_student for acc in history['accuracy']]\n",
         "ax4.bar(history['epoch'], improvement, color=['green' if x > 0 else 'red' for x in improvement])\n",
@@ -712,13 +578,6 @@
         "plt.savefig('training_results.png', dpi=150, bbox_inches='tight')\n",
         "plt.show()\n",
         "print(\"\\nSaved: training_results.png\")"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## 15. Save Results"
       ]
     },
     {
@@ -750,12 +609,18 @@
         "with open(f\"{save_path}/training_results.json\", \"w\") as f:\n",
         "    json.dump(results, f, indent=2)\n",
         "\n",
-        "print(f\"\\n✅ Model saved to: {save_path}\")\n",
-        "print(f\"✅ Results saved to: {save_path}/training_results.json\")"
+        "print(f\"\\nModel saved to: {save_path}\")\n",
+        "print(f\"Results saved to: {save_path}/training_results.json\")"
       ]
     }
   ],
   "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "gpuType": "A100",
+      "machine_shape": "hm",
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3",
       "language": "python",
@@ -764,12 +629,6 @@
     "language_info": {
       "name": "python",
       "version": "3.10.0"
-    },
-    "accelerator": "GPU",
-    "colab": {
-      "provenance": [],
-      "machine_shape": "hm",
-      "gpuType": "A100"
     }
   },
   "nbformat": 4,
